tests/pass/return_widening.kl
fn tonum(nter x) num {
    divolvi x;
}

fn inisiu() {
    num resultado = tonum(7);
    mostran(resultado);
}
